--- a/index.html
+++ b/index.html
@@ -320,8 +320,8 @@
                 Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus.
               </p>
               <div class="p-1">
-                <p class="text-black-50 d-inline-block fw-bold">Created By</p><span class="Graphberry p-2 fw-bold" style="color: var(--secondary-color);">Graphberry</span>
-                <p class="text-black-50 fw-bold">© 2022 - <span class="Bondi fw-bold p-2" style="color: var(--third-color);">Bondi Inc</span></p>
+                <p class="text-black-50 d-inline-block fw-bold">Created By</p><span class="Graphberry p-2 fw-bold" style="color: var(--secondary-color);">Ahmed Hany</span>
+                <p class="text-black-50 fw-bold">© 2022 - <span class="Bondi fw-bold p-2" style="color: var(--third-color);">ahmedhanyb04@gmail.com</span></p>
               </div>
             </div>
             <div class="p-1 col-lg-3 col-md-6 px-lg-5 px-md-3">
